# Waveshare_PixelMatrixStudio

./: .gitignore  BOARD_AND_WIRING.md  PMX_CONTENT_WORKFLOW.md  README.md  README_EN.md
PixelMatrixStudio/: PixelMatrixStudio.cpp  PixelMatrixStudio.rc  README.md  build.bat
PixelMatrixStudio/tools/: make_icon.cpp
docs/: WEB_TOOL.md  WORKFLOW.md
matrix_idf/: CMakeLists.txt  flash_pmx.ps1  partitions.csv  sdkconfig  sdkconfig.defaults
matrix_idf/main/: CMakeLists.txt  PMX烧录说明.md  esp32_i2s_parallel_dma.c  esp32_i2s_parallel_dma.h  matrix_idf.c  web_index.html  wifi_config.example.h
matrix_idf/tools/: generate_https_cert.ps1  make_white_pmx.cpp
pmxs/: ayanami.pmx  no.pmx  pg.pmx  pg2.pmx  rainbow cat.pmx  st.pmx
